[tool.poetry]
name = "kesha"
version = "0.1.0"
description = "Accounting Helper Django App"
authors = ["Florian Rämisch <olf@subsignal.org>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
django-afa = {git = "https://github.com/olf42/django-afa.git", rev = "main"}
Django = "^3.2"
django-money = "^1.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
black = "^20.8b1"
pre-commit = "^2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
